@@ -258,14 +258,16 @@ scavenge_newspace(void)
     lispobj *here, *next;
 
     here = new_space;
-    while (here < new_space_free_pointer) {
+
+    do {
         /*      printf("here=%lx, new_space_free_pointer=%lx\n",
                 here,new_space_free_pointer); */
         next = new_space_free_pointer;
         heap_scavenge(here, next);
-        scav_weak_hash_tables(weak_ht_alivep_funs, gc_scav_pair);
         here = next;
-    }
+    } while (new_space_free_pointer > here ||
+             (test_weak_triggers(0, 0) && new_space_free_pointer > here));
+    gc_dispose_private_pages();
     /* printf("done with newspace\n"); */
 }
 
@@ -357,6 +359,7 @@ search_dynamic_space(void *pointer)
 void
 gc_init(void)
 {
+    weakobj_init();
     scavtab[WEAK_POINTER_WIDETAG] = scav_weak_pointer;
 }
 
