@@ -13,6 +13,8 @@ changes relative to sbcl-1.4.3:
   * bug fix: DELETE-DIRECTORY no longer signals an error when the directory is
     supplied as a pathname with name and/or type components containing escaped
     characters. (lp#1740624)
+  * bug fix: weak hash-tables no longer cause GC time to scale superlinearly
+    (lp#1241771)
 
 changes in sbcl-1.4.3 relative to sbcl-1.4.2:
   * enhancement: SLEEP respects deadlines established by SB-SYS:WITH-DEADLINE.
